[package]
name = "helios"
version = "0.1.0"
edition = "2024"
description = "Simple landing page for Helios"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sysinfo = "0.36.1"
tokio = { version = "1.47.1", features = ["full"] }

[profile.production]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
